--- a/ultimamente.html
+++ b/ultimamente.html
@@ -28,7 +28,7 @@
               <h1>Login</h1>
 
           <div class="email">
-          <label for="email"><b>Email</b></label>
+          <label for="email"><b>oi</b></label>
           <input type="text" placeholder="Escreve o teu E-mail" name="email" required>
         </div>
       <div class="pass">
